rewrote changes for v6.8.0

--- a/dada/extras/documentation/pod_source/changes_6_x.pod
+++ b/dada/extras/documentation/pod_source/changes_6_x.pod
@@ -2,59 +2,97 @@
 
 =head1 6.8.0
 
-=head2 Features
+=head2 Features 6.8.0
 
-=head3 Core5 Labs FileManager Support
+=head3 Rich Text Editors and Web-Based File Browsers
 
-Dada Mail now supports the Core5 FileManager, along with KCFinder. More information on FileManager: 
+Dada Mail supports multiple rich text editors, allowing you to easily author email messages with formatted text, images and simple layouts. Dada Mail also supports uploading images from your own computer, to your web server and placing those images into your mailing list message, using the included web-based file browsers. 
+
+=head4 CKEditor Upgraded to v4.3, TinyMCE Upgraded to v4.0.11, FCKeditor retired
+
+This release of Dada Mail upgrades two of the included rich text editors: CKEditor has been upgraded to v4.3 (from v3.x), and TinyMCE has been upgraded to v4.0.11 (from v3.x). This release also retires FCKeditor, which has been superseded by CKEditor. 
+
+These new rich text editors visually look much better than their predecessors and should provide additional functionality to help you author beautiful messages. 
+
+One of the features we really enjoy is allowing you to toggle between seeing visible blocks showing the underlying structure of your message, without having to delve into the source code of the message itself.
+
+Another feature that can prove useful and time-saving is the ability to simply drag an image into the rich text editor window to place the image into your message. Both CKEditor and TinyMCE support this. We've tested this with Firefox on the Mac, but other browser may also be supported.
+
+=head4 CKEditor: Template Tag Dropdown Menu
+
+Also look for the new Tags drop down menu in CKeditor (not currently available in TinyMCE). This drop down menu allows you to easily select and place one of Dada Mail's template tags. Template Tags are an advanced feature of Dada Mail, allowing to create dynamic messages based on subscriber profile information (First Name, Last Name, etc). 
+
+=head4 Core5 Labs FileManager Support
+
+We're also shipping an additional web-based file browser called, FileManager. These file browsers are what allows you to view files on your server to select an image to add to your message, or to select an attachment. Dada Mail has shipped with the KCFinder file browser (and still will), but some users have had problems with it working correctly. With the addition of FileManager, users of Dada Mail should now have a great alternative to utilize.
+
+More information on B<FileManager:>
 
 L<http://labs.corefive.com/projects/filemanager/>
 
-Learn more about WYSIWYG Editors and File Browser support in Dada Mail: 
+Learn more about the rich text editors and web-based file browser support in Dada Mail: 
 
 L<http://dadamailproject.com/d/features-wysiwyg_editors.pod.html>
 
-We've added FileManager support to Dada Mail, because some people are having trouble with KCFinder's php backend code. 
+=head3 Bridge 6.8.0
 
-FileManager's backend connector (that we ship) is written in Perl, so if you can run Dada Mail, using FileManager should work equally well. 
+The Bridge plugin transforms a Dada Mail mailing list from an announce-only mailing list, where you send message through Dada Mail's own List Control panel, to a full-blown discussion list, where members can send a message from their own mail reader (whichever one they'd like!) and have it sent to the entire mailing list, creating group discussions. Bridge can also be used for an announce-only mailing list, allowing the List Owner, and/or a seperate list of addresses, called Authorized Senders, to send messages to your mailing list, without allowing your Subscribers to do the same. 
 
-=head3 CKEditor Upgraded to v4.3
+For more information on the Bridge plugin, see: 
+L<http://dadamailproject.com/d/bridge.cgi.html>
 
-CKEditor has been upgraded from v3.x to v4.3
+This version of Dada Mail supports many difference enhancements: 
 
-=head3 CKEditor: Template Tag Dropdown Menu
+=head4 Moderators and Authorized Senders
 
-The CKEditor now has a dropdown menu allowing you to easily access some the most useful and familiar email template tags, Subscriber Profile Fields, List Settings and control structions (loop, if, unless, etc). Select a tag to have it placed into your editing window. 
+Moderators, A separate list of addresses from your Subscribers, can now be created, whose only job is to view incoming messages, and moderate them, choosing what gets allowed to be posted (or not!). This job used to be the job of the Authorized Senders sublist, but to make things easier and more flexible, we've made split this into two separate sublists. 
 
-=head3 TinyMCE Upgraded to v4.0.11
+Authorized Senders are still around: a separate list of addresses who' members are allowed to send messages to a mailing list, without having to be a member of the Subscribers, themselves. Say you have an announce-only mailing list, where you'd like to give permission of just a few people in an organization to send messages to the mailing list. All you need to do is add them to your Authorized Senders and give them the List Address to send to. No need to give them login access to the List Control Panel. 
 
-TinyMCE has been upgraded from v3.x to v4.0.11
+In discussion lists, you also have the option to moderate incoming messages, except for those messages from an address that's a member of your Authorized Senders. 
 
-=head3 Bridge: Moderators and Authorized Senders
+=head4 On Behalf Of (p.p. Mode)
 
-The job of the Authorized Senders sublist has been split into two sublists: 
+Bridge also has a new discussion list option called, On Behalf Of (p.p. Mode). We're big fans of the Amazon SES email sending service, but the service is set up to allow accept messages from addresses you've verified using their own system. This is fine for a few addresses, but can be unrealistic for an entire discussion list, whose members may number in the hundreds, or even thousands. When p.p. Mode is enabled, messages will be sent out on behalf of the List Owner, allowing you to set up a discussion list with Amazon SES.
 
-B<Authorized Senders> will continue to be the sublist of addresses, that may post to a mailing list, without having to be a member of the Subscribers. 
+=head4 Message Received! Notification Message
 
-B<Moderators> will now simply be a sublist of addresses that get sent out a confirmation email to approve or deny message postings
+Bridge also now allows you the option to send out a, "Message Received" message, telling the original poster that their message was delivered correctly, and will be sent out as soon as it can. 
 
-=head3 Bridge: "On Behalf Of"; (p.p. mode) Support
-
-Discussion Messages may now be sent, "On Behalf Of" the original sender by the List Owner. This allows you to set up a discussion list with Amazon SES, which only allows messages from verified senders. You may now verify only your List Owner, and still have a discussion list. 
-
-=head3 Mass Mailing Logs: Saveable, viewable in the Log Viewer Plugin
-
-Logs made for specific mass mailings used to be deleted, when a mass mailing was finished, they're now saved, so that you may view them at a later time, using the Log Viewer plugin. 
-
-=head2 Change 6.8.0
+Sometimes, large or busy mailing lists will have the scenario, where messages take longer than possibly expected to be delivered. This may lead to the original poster assuming the message was never actually delivered - so they'll send the message again - perhaps more than twice! This leads to multiple postings of the same message, not something you'd want. The, "message received" notification message helps to confirm the original poster that their message has been received without a problem.
 
 =head3 Amazon SES Auto-Adjust Batch Sending Rates
 
-Dada Mail has an option (which we think you should use) to automatically adjust batch sending rates, when sending with Amazon SES. We've modified the algorithm that figures out this rate to be more aggressive with sending speed, without going over your spec'd Amazon SES sending limits. Welcome to faster sending w/Amazon SES! 
+Dada Mail supports sending email using a variety of methods: one of these methods is using the Amazon Simple Email Service. Amazon SES allows you to a large amount of messages, fast, with great deliverability for a low cost. 
 
-=head3 FCKeditor Support Dropped
+For more information on Dada Mail and Amazon SES, see: 
+L<http://dadamailproject.com/d/features-amazon_ses_support.pod.html>
 
-With the upgrade of CKeditor to v4.x, we've now fully dropped support for FCKeditor. FCKeditor has been listed as, "deprecated" for over a year and during that time, it has been not been advised to be installed at all. 
+
+Dada Mail already self-adjusts its batch sending rates, to work with Amazon SES's set limits. As SES's limits grows, so will your sending speed. 
+
+In this release, we've optimized the auto batch sending rates, so that mass sending speeds in Dada Mail start out faster, and then ease back slowly, so that you never go over the limit imposed by SES. 
+
+For mailing lists whose membership is smaller than the daily limit you have with SES, this gives you a much fast sending rate. For example: say you have a list of only 500 members. The default sending rate for SES is up to 5 messages/second, and 10,000 messages a day. 
+
+Prior versions of Dada Mail would send at a rate of around 375 messages/hour - fast enough that you won't go over your daily limit, and giving a little wiggly room to allow you to send other messages (subscription confirmation, other transactional messages, etc) Your mass mailing would still take around an hour and a half to complete, even though your SES limits would allow you to send well above this limit: remember, you can send up to 5 messages/second! 
+
+In this version of Dada Mail, that same mailing list of 500 members would send in minutes, rather than hours, as Dada Mail will start sending messages at 5 messages/second, rather than 1 message every ~10 seconds. Big improvement! 
+
+This faster sending rate will also help signal Amazon SES's system that you're using your resources to their maximum allowed usage. This in turn will signal SES to actually give you more resources to use, raising your limit, and allowing your to send more messages/day with a higher per-second limit. All this will happen, automatically, as you send out your messages. 
+
+=head3 Mass Mailing Logs: save-able, viewable in the Log Viewer plugin
+
+When sending out a mass mailing, Dada Mail creates a log of the activity of the mass mailing. This is a separate log for the usage log, and the error log, since it only pertains to one specific mass mailing, and also this log could be very, very large! 
+
+In past versions of Dada Mail, this log was simply deleted, when a mass mailing was finished. To help with understanding more complex issues with your mass mailing, this log can now be optionally saved, after the mass mailing is completed, and easily viewed using Dada Mail's included Log Viewer. 
+
+
+=head3 Highlighting in the list control panel's menu
+
+Dada Mail's List Control Panel let's you do a LOT of things, and there's many different screens to work with. To help you remember where you are, and what you've clicked on, we now highlight the screen you're on, on the left-hand menu. 
+
+=head2 Change 6.8.0
 
 =head3 Clickthrough Tracking: URLs in image maps tracked
 
